Importing of movie_lens_dataset

--- a/Recommendation.ipynb
+++ b/Recommendation.ipynb
@@ -1,6 +1,132 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/generalassembly/anaconda/lib/python2.7/site-packages/lightfm/_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
+      "  warnings.warn('LightFM was compiled without OpenMP support. '\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from lightfm.datasets import fetch_movielens\n",
+    "from lightfm import LightFM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#fetch data and format it\n",
+    "data = fetch_movielens(min_rating=4.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'item_feature_labels': array([u'Toy Story (1995)', u'GoldenEye (1995)', u'Four Rooms (1995)', ...,\n",
+       "        u'Sliding Doors (1998)', u'You So Crazy (1994)',\n",
+       "        u'Scream of Stone (Schrei aus Stein) (1991)'], dtype=object),\n",
+       " 'item_features': <1682x1682 sparse matrix of type '<type 'numpy.float32'>'\n",
+       " \twith 1682 stored elements in Compressed Sparse Row format>,\n",
+       " 'item_labels': array([u'Toy Story (1995)', u'GoldenEye (1995)', u'Four Rooms (1995)', ...,\n",
+       "        u'Sliding Doors (1998)', u'You So Crazy (1994)',\n",
+       "        u'Scream of Stone (Schrei aus Stein) (1991)'], dtype=object),\n",
+       " 'test': <943x1682 sparse matrix of type '<type 'numpy.int32'>'\n",
+       " \twith 5469 stored elements in COOrdinate format>,\n",
+       " 'train': <943x1682 sparse matrix of type '<type 'numpy.int32'>'\n",
+       " \twith 49906 stored elements in COOrdinate format>}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<943x1682 sparse matrix of type '<type 'numpy.int32'>'\n",
+      "\twith 49906 stored elements in COOrdinate format>\n",
+      "<943x1682 sparse matrix of type '<type 'numpy.int32'>'\n",
+      "\twith 5469 stored elements in COOrdinate format>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print training and testing data\n",
+    "print(repr(data['train']))\n",
+    "print(repr(data['test']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
