--- a/Recommendation.ipynb
+++ b/Recommendation.ipynb
@@ -100,6 +100,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightfm.lightfm.LightFM at 0x10c7d7d10>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create model\n",
+    "model = LightFM(loss='warp')\n",
+    "#train model\n",
+    "model.fit(data['train'], epochs=30, num_threads=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sample_recommendation(model, data, user_ids):\n",
+    "\n",
+    "    #number of users and movies in training data\n",
+    "    n_users, n_items = data['train'].shape\n",
+    "\n",
+    "    #generate recommendations for each user we input\n",
+    "    for user_id in user_ids:\n",
+    "\n",
+    "        #movies they already like\n",
+    "        known_positives = data['item_labels'][data['train'].tocsr()[user_id].indices]\n",
+    "\n",
+    "        #movies our model predicts they will like\n",
+    "        scores = model.predict(user_id, np.arange(n_items))\n",
+    "        #rank them in order of most liked to least\n",
+    "        top_items = data['item_labels'][np.argsort(-scores)]\n",
+    "\n",
+    "        #print out the results\n",
+    "        print(\"User %s\" % user_id)\n",
+    "        print(\"     Known positives:\")\n",
+    "\n",
+    "        for x in known_positives[:3]:\n",
+    "            print(\"        %s\" % x)\n",
+    "\n",
+    "        print(\"     Recommended:\")\n",
+    "\n",
+    "        for x in top_items[:3]:\n",
+    "            print(\"        %s\" % x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User 3\n",
+      "     Known positives:\n",
+      "        Seven (Se7en) (1995)\n",
+      "        Contact (1997)\n",
+      "        Starship Troopers (1997)\n",
+      "     Recommended:\n",
+      "        Scream (1996)\n",
+      "        Air Force One (1997)\n",
+      "        Titanic (1997)\n",
+      "User 25\n",
+      "     Known positives:\n",
+      "        Dead Man Walking (1995)\n",
+      "        Star Wars (1977)\n",
+      "        Fargo (1996)\n",
+      "     Recommended:\n",
+      "        L.A. Confidential (1997)\n",
+      "        Contact (1997)\n",
+      "        Titanic (1997)\n",
+      "User 450\n",
+      "     Known positives:\n",
+      "        Contact (1997)\n",
+      "        George of the Jungle (1997)\n",
+      "        Event Horizon (1997)\n",
+      "     Recommended:\n",
+      "        Air Force One (1997)\n",
+      "        I Know What You Did Last Summer (1997)\n",
+      "        Dante's Peak (1997)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_recommendation(model, data, [3, 25, 450])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
